--- a/tools/scraper/package.json
+++ b/tools/scraper/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Eric Mantooth",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "jquery": "^2.1.4",
